--- a/rootdir/etc/init.custom.rc
+++ b/rootdir/etc/init.custom.rc
@@ -4,15 +4,80 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-# D2TW
+import /vendor/etc/init/init.device.rc
+import /vendor/etc/init/init.batterysecret.rc
+import /vendor/etc/init/init.mi_thermald.rc
+
+on fs
+    mkdir /mnt/vendor/persist/subsys 0770 root system
+    mkdir /mnt/vendor/persist/camera 0777 root root
+    mkdir /mnt/vendor/persist/audio 0755 system system
+    chmod 644 /mnt/vendor/persist/audio/us_manual_cal
+    mkdir /mnt/vendor/persist/haptics 0755 system system
+    chmod 0644 /mnt/vendor/persist/haptics/vov
+    chown system system /mnt/vendor/persist/haptics/vov
+    chown system system /sys/bus/i2c/drivers/aw8697_haptic/2-005a/vov
+    chown system system /sys/bus/i2c/drivers/aw8697_haptic/2-005a/high_vol
+    chown system system /dev/tfa_reg
+    chown system system /dev/tfa_rw
+    chown system system /dev/tfa_rpc
+    chown system system /dev/tfa_control
+    chmod 0660 /dev/tfa_reg
+    chmod 0660 /dev/tfa_rw
+    chmod 0660 /dev/tfa_rpc
+    chmod 0660 /dev/tfa_control
+    chown system system /sys/devices/platform/soc/a8c000.i2c/i2c-2/2-005a/custom_wave
+    chmod 0666  /sys/devices/platform/soc/a8c000.i2c/i2c-2/2-005a/custom_wave
+
+on post-fs-data
+    mkdir /data/vendor/sensor_log
+    chown system system /data/vendor/sensor_log
+    chown system system /vendor/etc/sensors/sensor_diag.cfg
+    chmod 0644 /dev/elliptic0
+    chmod 0644 /dev/elliptic1
+    chmod 0660 /dev/ir_spi
+    chown system system /dev/ir_spi
+    mkdir /data/vendor/wlan_logs 0777 root shell
+    mkdir /data/vendor/nfc 0770 nfc nfc
+    mkdir /data/vendor/misc/display 0771 system system
+    mkdir /data/vendor/mqsas_common 0771 system system
+    mkdir /data/vendor/thermal 0771 root system
+    mkdir /data/vendor/thermal/config 0771 root system
+
+on init
+    chmod 0777 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dynamic_dsi_clock
+
 on boot
+    chown system system /sys/class/touch/touch_dev/palm_sensor
+    chown system system /sys/class/touch/touch_dev/partial_diff_data
+    chmod 0664 /sys/class/power_supply/battery/dc_thermal_levels
+    chown system system /sys/class/thermal/thermal_message/sconfig
+    chown system system /sys/class/thermal/thermal_message/balance_mode
+    chown cameraserver cameraserver /sys/class/thermal/thermal_message/flash_state
+    mkdir /mnt/vendor/persist/camera 0755 system cameraserver
+    copy  /vendor/etc/tunings.txt /mnt/vendor/persist/vpp/tunings.txt
+
+    # D2TW
     chown system system /sys/touchpanel/double_tap
+
+    # Touch
+    chown system system /sys/devices/virtual/touch/touch_dev/bump_sample_rate
+
+    # Lineage health
+    chmod 0660 /sys/class/power_supply/battery/input_suspend
+    chown system system /sys/class/power_supply/battery/input_suspend
+
+on charger
+    mkdir /mnt/vendor/persist
+    chown root system /mnt/vendor/persist
+    chmod 0771 /mnt/vendor/persist
+    mkdir /mnt/vendor/persist/subsys 0770 root system
+    setprop sys.usb.config adb
 
 # Fingerprint
 on init
     chmod 0664 /dev/fortsense_fp
     chown system system /dev/fortsense_fp
-
     chmod 0666 /dev/goodix_fp
     chown system system /dev/goodix_fp
 
@@ -45,14 +110,11 @@ on post-fs-data
     mkdir /data/vendor/fpc 0770 system system
     mkdir /data/vendor/fpdump 0770 system system
     mkdir /data/vendor/goodix 0770 system system
-
     mkdir /mnt/vendor/persist/fpc 0770 system system
     mkdir /mnt/vendor/persist/goodix 0770 system system
 
-# Health
-on boot
-    chmod 0660 /sys/class/power_supply/battery/input_suspend
-    chown system system /sys/class/power_supply/battery/input_suspend
+on property:persist.vendor.sys.fp.fod.large_field=1
+    write sys/bus/i2c/devices/3-0049/fod_area 1
 
 # NFC
 service qti_esepowermanager_service_1_1 /vendor/bin/hw/vendor.qti.esepowermanager@1.1-service
@@ -82,6 +144,15 @@ on boot && property:ro.boot.product.hardware.sku=nfc
     enable vendor.nfc_hal_service
 
 # NVMAC
+on post-fs-data
+    mkdir /data/vendor/mac_addr 0770 system wifi
+
+service vendor.nv_mac /vendor/bin/nv_mac
+    class late_start
+    user system
+    group system inet net_admin wifi net_raw
+    oneshot
+
 on property:init.svc.vendor.nv_mac=stopped
     start vendor.btmac-sh
 
@@ -91,7 +162,3 @@ service vendor.btmac-sh /vendor/bin/init.mi.btmac.sh
     group system bluetooth wifi
     oneshot
     disabled
-
-# Touch
-on boot
-    chown system system /sys/devices/virtual/touch/touch_dev/bump_sample_rate
